--- a/Car Evaluation/notebook/Car Model.ipynb
+++ b/Car Evaluation/notebook/Car Model.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Avaliação de Veículos\n",
+    "Criação de um modelo de Machine Learning para avaliação de veículos com base em características, após,\n",
+    "será gerado um modelo, salvo em disco, para ser utilizado através de uma API, feito em Flask."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
